Release 0.3.2 (#45)
* added mongo projection funcionality to get() functions #454

* test data

* added getCb for custom get callbacks, added kill_chain_phase => grouping mapping for indicator calls, fixed bug in json api converter for get calls producing incorrect links #484

* added mongo projection funcionality to get() functions #454

* added getCb for custom get callbacks, added kill_chain_phase => grouping mapping for indicator calls, fixed bug in json api converter for get calls producing incorrect links #484

* unfetter-discover/unfetter#345 expose parse via REST endpoint

* unfetter-discover/unfetter#345

* updated post patch routes to handle meta properties

* updated gitignore

* began UAC

* updated gitignore

* updated files to use new config file

* registraion route

* fixed jwt middle ware

* git admin controller

* admin middleware

* identity added to user object

* fixed user model on github callback

* gitignore update

* api_configuration_tool.py v1

* promote users scripts

* attackPatternsByIndicator route added #483

* comments api added #499

* changed returned structure for add comment

* removed console log

* fixed some bugs in add comment, added like api

* fixes unfetter-discover/unfetter#500

* add labels #483 #499

* console formatting changes to python scripts

* Surpress npm installation output

* Issue 483 2 (#35)

* user profile route #483

* registration route cleanup #483

* web analytics API and admin site usage route #508

* Added deleteByIdCb function to basecontroller, wrote custom callback to handle relation deletions #506

* added https-proxy-agent, added proxy handling in passport github strateg #527

* added interaction api #517

* Issue 524 (#40)

* basic DEMO flag working #524
* Fixed avatar mapping in addComment #524

* Issue 528 (#41)

* organizations api #528

* Organizations apply to be leader and admin organization leader approval a
